refactor: separate CLI into examples folder

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
 name = "py-netatmo-truetemp"
 version = "0.1.0"
@@ -5,7 +9,6 @@ description = "Python client for Netatmo API with truetemperature control - set 
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "click>=8.1.8",
     "platformdirs>=4.0.0",
     "requests==2.32.3",
 ]
@@ -16,3 +19,6 @@ dev = [
     "pylint>=4.0.3",
     "ruff>=0.14.5",
 ]
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/netatmo_api"]
