--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dev = [
     "mypy>=1.18.2",
     "pylint>=4.0.3",
     "ruff>=0.14.5",
+    "types-requests>=2.32.4.20250913",
 ]
 
 [tool.hatch.build.targets.wheel]
