--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
 dev = [
     "mypy>=1.18.2",
     "pylint>=4.0.3",
+    "pytest-mock>=3.15.1",
+    "pytest>=9.0.2",
     "ruff>=0.14.5",
     "types-requests>=2.32.4.20250913",
 ]
