--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,10 @@
     "python.defaultInterpreterPath": "${workspaceFolder}/.venv",
     "debug.javascript.defaultRuntimeExecutable": {
         "pwa-node": "/home/p4ult/.local/share/mise/shims/node"
-    }
+    },
+    "python.testing.pytestArgs": [
+        "tests"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
