chore: prepare repo for open source release

--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,27 @@ wheels/
 # Virtual environments
 .venv
 
+# Testing
+.pytest_cache/
+.tox/
+.coverage
+htmlcov/
+*.cover
+
+# Editor files
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Logs
+*.log
+
+# IDE-specific settings
+.vscode/
+
 # Mise local configuration (contains credentials and room IDs)
 .mise.local.toml
+
+# Personal task configurations
+examples/Taskfile.yml
