--- a/examples/pyproject.toml
+++ b/examples/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "py-netatmo-truetemp",
-    "click>=8.1.8",
+    "typer[all]>=0.9.0",
     "rich>=14.2.0",
 ]
 
