--- a/examples/.gitignore
+++ b/examples/.gitignore
@@ -29,6 +29,20 @@ wheels/
 # uv
 uv.lock
 
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+
+# Linting
+.ruff_cache/
+.mypy_cache/
+
+# Environment
+.env
+.env.local
+
 # IDEs
 .vscode/
 .idea/
