--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,10 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "bandit[toml]>=1.8.0",
     "mypy>=1.18.2",
     "pylint>=4.0.3",
+    "pytest-cov>=6.0.0",
     "pytest-mock>=3.15.1",
     "pytest>=9.0.2",
     "ruff>=0.14.5",
