ci: fix test collection and examples checks
- Move tests/test_expire_token.py to scripts/expire_token.py (not a pytest test)
- Install dev dependencies in examples checks for ruff access

Fixes pytest collection crash from exit(1) in module scope
Fixes "ruff: command not found" in examples CI job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,7 +100,7 @@ jobs:
 
       - name: Install examples dependencies
         working-directory: examples
-        run: uv sync
+        run: uv sync --all-extras
 
       - name: Run ruff format check on examples
         working-directory: examples
