--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dev = [
     "pytest-mock>=3.15.1",
     "pytest>=9.0.2",
     "ruff>=0.14.5",
+    "twine>=6.0.0",
     "types-requests>=2.32.4.20250913",
 ]
 
