--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Install dependencies
         run: uv sync --frozen
 
+      - name: Run pre-commit checks
+        run: pre-commit run --all-files
+
       - name: Run ruff format check
         run: uv run ruff format --check src/ tests/
 
