--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ Documentation = "https://github.com/P4uLT/py-netatmo-truetemp#readme"
 dev = [
     "bandit[toml]>=1.8.0",
     "mypy>=1.18.2",
+    "pre-commit>=4.0.0",
     "pylint>=4.0.3",
     "pytest-cov>=6.0.0",
     "pytest-mock>=3.15.1",
