--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
         run: uv sync --frozen
 
       - name: Run pre-commit checks
-        run: pre-commit run --all-files
+        run: uv run pre-commit run --all-files
 
       - name: Run ruff format check
         run: uv run ruff format --check src/ tests/
