--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,17 @@ jobs:
         run: uv sync --frozen
 
       - name: Run library tests with coverage
-        run: uv run pytest tests/ -v --cov=src/py_netatmo_truetemp --cov-report=term-missing
+        run: uv run pytest tests/ -v --cov=src/py_netatmo_truetemp --cov-report=term-missing --cov-report=xml
+
+      - name: Upload coverage to Codecov
+        if: matrix.os == 'ubuntu-latest'
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage.xml
+          flags: unittests
+          name: codecov-umbrella
+          fail_ci_if_error: false
 
   examples-checks:
     name: Examples Checks
