--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,11 @@
 version: 2
 updates:
   # Root package dependencies
-  - package-ecosystem: "pip"
+  - package-ecosystem: "uv"
     directory: "/"
     schedule:
       interval: "weekly"
+      day: "monday"
     commit-message:
       prefix: "chore(deps)"
       include: "scope"
@@ -12,12 +13,22 @@ updates:
       - "dependencies"
       - "automated"
     open-pull-requests-limit: 10
+    groups:
+      dev-dependencies:
+        patterns:
+          - "pytest*"
+          - "mypy*"
+          - "ruff*"
+          - "bandit*"
+          - "pylint*"
+          - "twine*"
 
   # Examples dependencies
-  - package-ecosystem: "pip"
+  - package-ecosystem: "uv"
     directory: "/examples"
     schedule:
       interval: "weekly"
+      day: "monday"
     commit-message:
       prefix: "chore(deps)"
       include: "scope"
@@ -26,6 +37,11 @@ updates:
       - "examples"
       - "automated"
     open-pull-requests-limit: 5
+    groups:
+      cli-dependencies:
+        patterns:
+          - "typer*"
+          - "rich*"
 
   # GitHub Actions
   - package-ecosystem: "github-actions"
