--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,17 @@ jobs:
         run: uv sync --frozen
 
       - name: Run library tests with coverage
-        run: uv run pytest tests/ -v --cov=src/py_netatmo_truetemp --cov-report=term-missing
+        run: uv run pytest tests/ -v --cov=src/py_netatmo_truetemp --cov-report=term-missing --cov-report=xml
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          files: ./coverage.xml
+          flags: library-${{ matrix.os }}
+          name: library-${{ matrix.os }}
+          fail_ci_if_error: false
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
   examples-checks:
     name: Examples Checks
@@ -115,7 +125,17 @@ jobs:
 
       - name: Run examples tests with coverage
         working-directory: examples
-        run: uv run pytest tests/ -v --cov=. --cov-report=term-missing
+        run: uv run pytest tests/ -v --cov=. --cov-report=term-missing --cov-report=xml
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          files: ./examples/coverage.xml
+          flags: examples
+          name: examples
+          fail_ci_if_error: false
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
   security:
     name: Security Scan
