--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,7 +125,14 @@ jobs:
 
       - name: Run examples tests with coverage
         working-directory: examples
-        run: uv run pytest tests/ -v --cov=. --cov-report=term-missing
+        run: uv run pytest tests/ -v --cov=. --cov-report=term-missing --cov-report=xml
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./examples/coverage.xml
+          flags: examples
 
   security:
     name: Security Scan
