--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,33 @@ dev = [
     "ruff>=0.14.5",
     "twine>=6.0.0",
     "types-requests>=2.32.4.20250913",
+    "commitizen>=4.10.1",
 ]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/py_netatmo_truetemp"]
+
+[tool.commitizen]
+name = "cz_conventional_commits"
+version = "0.1.0"
+version_files = [
+    "pyproject.toml:version",
+    "src/py_netatmo_truetemp/__init__.py:__version__",
+]
+tag_format = "v$version"
+update_changelog_on_bump = true
+changelog_file = "CHANGELOG.md"
+changelog_merge_prerelease = true
+changelog_start_rev = "HEAD"
+style = [
+    ["qmark", "fg:#ff9d00 bold"],
+    ["question", "bold"],
+    ["answer", "fg:#ff9d00 bold"],
+    ["pointer", "fg:#ff9d00 bold"],
+    ["highlighted", "fg:#ff9d00 bold"],
+    ["selected", "fg:#cc5454"],
+    ["separator", "fg:#cc5454"],
+    ["instruction", ""],
+    ["text", ""],
+    ["disabled", "fg:#858585 italic"]
+]
