--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -3,6 +3,12 @@ version: '3'
 vars:
   PYTHON_VERSION: "3.13"
   PROJECT_NAME: "py-netatmo-truetemp"
+  GET_VERSION:
+    sh: grep -m1 'version = "' pyproject.toml | cut -d'"' -f2
+  GET_LATEST_TAG:
+    sh: git describe --tags --abbrev=0 2>/dev/null || echo ""
+  GET_REPO:
+    sh: gh repo view --json nameWithOwner -q .nameWithOwner 2>/dev/null || echo "P4uLT/py-netatmo-truetemp"
 
 includes:
   release: ./tasks/release
