refactor: move tasks/ to .task/ directory
- Rename tasks/ to .task/ following hidden directory convention
- Update Taskfile.yml includes to reference .task/*
- Update documentation references in CLAUDE.md
- Update documentation references in RELEASE_WORKFLOW_GUIDE.md

Follows project pattern of using hidden directories for tool-specific
configurations (.github, .vscode, .claude)

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -11,11 +11,11 @@ vars:
     sh: gh repo view --json nameWithOwner -q .nameWithOwner 2>/dev/null || echo "P4uLT/py-netatmo-truetemp"
 
 includes:
-  release: ./tasks/release
-  version: ./tasks/version
-  changelog: ./tasks/changelog
-  git: ./tasks/git
-  help: ./tasks/help
+  release: ./.task/release
+  version: ./.task/version
+  changelog: ./.task/changelog
+  git: ./.task/git
+  help: ./.task/help
 
 tasks:
   default:
