--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,12 +19,19 @@ jobs:
       cancel-in-progress: true
 
     steps:
+      - name: Generate GitHub App Token
+        uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ secrets.APP_ID }}
+          private-key: ${{ secrets.APP_PRIVATE_KEY }}
+
       - name: Checkout code
         uses: actions/checkout@v6
         with:
           fetch-depth: 0
           fetch-tags: true
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ steps.app-token.outputs.token }}
 
       - name: Set up Python 3.13
         uses: actions/setup-python@v6
@@ -40,24 +47,14 @@ jobs:
       - name: Install dependencies
         run: uv sync --frozen
 
-      - name: Import GPG key
-        uses: crazy-max/ghaction-import-gpg@v6
-        with:
-          gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
-          passphrase: ${{ secrets.GPG_PASSPHRASE }}
-          git_user_signingkey: true
-          git_commit_gpgsign: true
-          trust_level: 5
-
       - name: Create bump and changelog
         id: cz
         uses: commitizen-tools/commitizen-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ steps.app-token.outputs.token }}
           push: true
           branch: main
           changelog: true
-          gpg_sign: true
           git_name: "P4uLT"
           git_email: "7680607+P4uLT@users.noreply.github.com"
 
@@ -83,6 +80,7 @@ jobs:
         if: steps.cz.outputs.version != ''
         uses: ncipollo/release-action@v1
         with:
+          token: ${{ steps.app-token.outputs.token }}
           tag: v${{ steps.cz.outputs.version }}
           name: Release v${{ steps.cz.outputs.version }}
           body: ${{ steps.changelog.outputs.content }}
