--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,12 +19,19 @@ jobs:
       cancel-in-progress: true
 
     steps:
+      - name: Generate GitHub App Token
+        uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ secrets.APP_ID }}
+          private-key: ${{ secrets.APP_PRIVATE_KEY }}
+
       - name: Checkout code
         uses: actions/checkout@v6
         with:
           fetch-depth: 0
           fetch-tags: true
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ steps.app-token.outputs.token }}
 
       - name: Set up Python 3.13
         uses: actions/setup-python@v6
@@ -44,12 +51,12 @@ jobs:
         id: cz
         uses: commitizen-tools/commitizen-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ steps.app-token.outputs.token }}
           push: true
           branch: main
           changelog: true
-          git_name: "github-actions[bot]"
-          git_email: "github-actions[bot]@users.noreply.github.com"
+          git_name: "py-netatmo-truetemp-release-bot[bot]"
+          git_email: "py-netatmo-truetemp-release-bot[bot]@users.noreply.github.com"
 
       - name: Extract changelog for release
         if: steps.cz.outputs.version != ''
@@ -73,6 +80,7 @@ jobs:
         if: steps.cz.outputs.version != ''
         uses: ncipollo/release-action@v1
         with:
+          token: ${{ steps.app-token.outputs.token }}
           tag: v${{ steps.cz.outputs.version }}
           name: Release v${{ steps.cz.outputs.version }}
           body: ${{ steps.changelog.outputs.content }}
