--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,6 +55,9 @@ jobs:
           push: true
           branch: main
           changelog: true
+          gpg_sign: true
+          gpg_key: ${{ secrets.GPG_PRIVATE_KEY }}
+          gpg_passphrase: ${{ secrets.GPG_PASSPHRASE }}
           git_name: "py-netatmo-truetemp-release-bot[bot]"
           git_email: "py-netatmo-truetemp-release-bot[bot]@users.noreply.github.com"
 
