--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,19 +47,70 @@ jobs:
       - name: Install dependencies
         run: uv sync --frozen
 
-      - name: Configure git for GitHub App
-        run: |
-          git config user.name "py-netatmo-truetemp-release-bot[bot]"
-          git config user.email "py-netatmo-truetemp-release-bot[bot]@users.noreply.github.com"
-
-      - name: Create bump and changelog
+      - name: Run commitizen to bump version
         id: cz
-        uses: commitizen-tools/commitizen-action@master
-        with:
-          github_token: ${{ steps.app-token.outputs.token }}
-          push: true
-          branch: main
-          changelog: true
+        run: |
+          # Install commitizen
+          uv pip install commitizen
+
+          # Run bump to update files
+          cz bump --yes --changelog
+
+          # Capture version and commit message
+          NEW_VERSION=$(cz version -p)
+          COMMIT_MSG=$(git log -1 --pretty=%B)
+
+          # Get the tag that was created
+          NEW_TAG="v$NEW_VERSION"
+
+          # Export for next steps
+          echo "version=$NEW_VERSION" >> $GITHUB_OUTPUT
+          echo "tag=$NEW_TAG" >> $GITHUB_OUTPUT
+          echo "commit_message<<EOF" >> $GITHUB_OUTPUT
+          echo "$COMMIT_MSG" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+          # Get list of changed files
+          git diff HEAD~1 --name-only > /tmp/changed_files.txt
+
+          # Reset the commit but keep changes staged
+          git reset --soft HEAD~1
+        env:
+          GIT_AUTHOR_NAME: "py-netatmo-truetemp-release-bot[bot]"
+          GIT_AUTHOR_EMAIL: "py-netatmo-truetemp-release-bot[bot]@users.noreply.github.com"
+          GIT_COMMITTER_NAME: "py-netatmo-truetemp-release-bot[bot]"
+          GIT_COMMITTER_EMAIL: "py-netatmo-truetemp-release-bot[bot]@users.noreply.github.com"
+
+      - name: Create signed commit via GitHub API
+        if: steps.cz.outputs.version != ''
+        run: |
+          # Get the current commit SHA
+          PARENT_SHA=$(git rev-parse HEAD)
+
+          # Create a tree with the staged changes
+          TREE_SHA=$(git write-tree)
+
+          # Create commit via GitHub API (this will be signed by GitHub)
+          COMMIT_RESPONSE=$(gh api repos/${{ github.repository }}/git/commits \
+            -f message="${{ steps.cz.outputs.commit_message }}" \
+            -f tree="$TREE_SHA" \
+            -f parents[]="$PARENT_SHA")
+
+          NEW_COMMIT_SHA=$(echo "$COMMIT_RESPONSE" | jq -r '.sha')
+
+          # Update the main branch ref to point to new commit
+          gh api repos/${{ github.repository }}/git/refs/heads/main \
+            -X PATCH \
+            -f sha="$NEW_COMMIT_SHA"
+
+          # Create the tag via API
+          gh api repos/${{ github.repository }}/git/refs \
+            -f ref="refs/tags/${{ steps.cz.outputs.tag }}" \
+            -f sha="$NEW_COMMIT_SHA"
+
+          echo "Created signed commit: $NEW_COMMIT_SHA"
+        env:
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
 
       - name: Extract changelog for release
         if: steps.cz.outputs.version != ''
