--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
   release:
     name: Create Release
     runs-on: ubuntu-latest
-    if: "!startsWith(github.event.head_commit.message, 'bump:')"
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
       cancel-in-progress: true
@@ -47,54 +47,18 @@ jobs:
       - name: Install dependencies
         run: uv sync --frozen
 
-      - name: Create release with commitizen
-        id: cz
-        uses: commitizen-tools/commitizen-action@master
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          github_token: ${{ steps.app-token.outputs.token }}
-          push: true
-          branch: main
-          changelog: true
-          git_name: "py-netatmo-truetemp-release-bot[bot]"
-          git_email: "py-netatmo-truetemp-release-bot[bot]@users.noreply.github.com"
+          node-version: 20
 
-      - name: Verify release integrity
-        if: steps.cz.outputs.version != ''
-        run: |
-          echo "Version bumped to: ${{ steps.cz.outputs.version }}"
-          echo "Verifying git history..."
-          git log -1 --pretty=fuller
-
-          # Verify the tag was created
-          if ! git tag | grep -q "v${{ steps.cz.outputs.version }}"; then
-            echo "ERROR: Tag v${{ steps.cz.outputs.version }} not found"
-            exit 1
-          fi
-
-          # Verify changelog was updated
-          if ! grep -q "${{ steps.cz.outputs.version }}" CHANGELOG.md; then
-            echo "ERROR: CHANGELOG.md not updated"
-            exit 1
-          fi
-
-          echo "Release integrity verified"
-
-      - name: Extract changelog
-        if: steps.cz.outputs.version != ''
-        id: changelog
-        uses: mindsers/changelog-reader-action@v2
+      - name: Semantic Release
+        uses: cycjimmy/semantic-release-action@v4
         with:
-          version: ${{ steps.cz.outputs.version }}
-          path: ./CHANGELOG.md
-
-      - name: Create GitHub Release
-        if: steps.cz.outputs.version != ''
-        uses: ncipollo/release-action@v1
-        with:
-          token: ${{ steps.app-token.outputs.token }}
-          tag: v${{ steps.cz.outputs.version }}
-          name: Release v${{ steps.cz.outputs.version }}
-          body: ${{ steps.changelog.outputs.changes }}
-          draft: false
-          prerelease: false
-          generateReleaseNotes: true
+          extra_plugins: |
+            @semantic-release/changelog
+            @semantic-release/git
+            @semantic-release/exec
+            conventional-changelog-conventionalcommits
+        env:
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
