--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,8 +9,8 @@ repos:
       - id: check-merge-conflict
       - id: check-case-conflict
 
-  - repo: https://github.com/commitizen-tools/commitizen
-    rev: v4.10.1
+  - repo: https://github.com/compilerla/conventional-pre-commit
+    rev: v3.6.0
     hooks:
-      - id: commitizen
+      - id: conventional-pre-commit
         stages: [commit-msg]
