--- a/.releaserc.json
+++ b/.releaserc.json
@@ -4,19 +4,50 @@
     [
       "@semantic-release/commit-analyzer",
       {
-        "preset": "conventionalcommits"
+        "preset": "conventionalcommits",
+        "releaseRules": [
+          {"type": "feat", "release": "minor"},
+          {"type": "fix", "release": "patch"},
+          {"type": "perf", "release": "patch"},
+          {"type": "revert", "release": "patch"},
+          {"type": "docs", "scope": "README", "release": "patch"},
+          {"type": "refactor", "release": false},
+          {"type": "style", "release": false},
+          {"type": "chore", "release": false},
+          {"type": "test", "release": false},
+          {"type": "ci", "release": false}
+        ],
+        "parserOpts": {
+          "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES", "BREAKING"]
+        }
       }
     ],
     [
       "@semantic-release/release-notes-generator",
       {
-        "preset": "conventionalcommits"
+        "preset": "conventionalcommits",
+        "presetConfig": {
+          "types": [
+            {"type": "feat", "section": "Features"},
+            {"type": "fix", "section": "Bug Fixes"},
+            {"type": "perf", "section": "Performance Improvements"},
+            {"type": "revert", "section": "Reverts"},
+            {"type": "docs", "section": "Documentation", "hidden": false},
+            {"type": "style", "section": "Styles", "hidden": true},
+            {"type": "chore", "section": "Miscellaneous Chores", "hidden": true},
+            {"type": "refactor", "section": "Code Refactoring", "hidden": true},
+            {"type": "test", "section": "Tests", "hidden": true},
+            {"type": "build", "section": "Build System", "hidden": true},
+            {"type": "ci", "section": "Continuous Integration", "hidden": true}
+          ]
+        }
       }
     ],
     [
       "@semantic-release/changelog",
       {
-        "changelogFile": "CHANGELOG.md"
+        "changelogFile": "CHANGELOG.md",
+        "changelogTitle": "# Changelog\n\nAll notable changes to this project will be documented in this file.\n\nThe format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),\nand this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html)."
       }
     ],
     [
@@ -39,7 +70,10 @@
     [
       "@semantic-release/github",
       {
-        "successComment": false
+        "successComment": false,
+        "failComment": false,
+        "labels": ["release"],
+        "releasedLabels": ["released"]
       }
     ]
   ]
