--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,3 +72,5 @@ jobs:
           commit_message: "chore(release): ${{ steps.semantic.outputs.new_release_version }} [skip ci]"
           file_pattern: "CHANGELOG.md pyproject.toml src/py_netatmo_truetemp/__init__.py"
           tagging_message: "v${{ steps.semantic.outputs.new_release_version }}"
+          commit_user_name: "py-netatmo-truetemp-release-bot[bot]"
+          commit_user_email: "${{ secrets.APP_ID }}+py-netatmo-truetemp-release-bot[bot]@users.noreply.github.com"
