--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,11 @@ jobs:
           fetch-tags: true
           token: ${{ steps.app-token.outputs.token }}
 
+      - name: Configure git for GitHub App
+        run: |
+          git config --global user.name "py-netatmo-truetemp-release-bot[bot]"
+          git config --global user.email "${{ secrets.APP_ID }}+py-netatmo-truetemp-release-bot[bot]@users.noreply.github.com"
+
       - name: Set up Python 3.13
         uses: actions/setup-python@v6
         with:
@@ -53,12 +58,22 @@ jobs:
           node-version: 20
 
       - name: Semantic Release
+        id: semantic
         uses: cycjimmy/semantic-release-action@v4
         with:
           extra_plugins: |
             @semantic-release/changelog
-            @semantic-release/git
             @semantic-release/exec
             conventional-changelog-conventionalcommits
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+
+      - name: Commit and push changes
+        if: steps.semantic.outputs.new_release_published == 'true'
+        uses: stefanzweifel/git-auto-commit-action@v5
+        env:
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+        with:
+          commit_message: "chore(release): ${{ steps.semantic.outputs.new_release_version }} [skip ci]"
+          file_pattern: "CHANGELOG.md pyproject.toml src/py_netatmo_truetemp/__init__.py"
+          tagging_message: "v${{ steps.semantic.outputs.new_release_version }}"
