--- a/.releaserc.json
+++ b/.releaserc.json
@@ -57,6 +57,17 @@
       }
     ],
     [
+      "@semantic-release-extras/verified-git-commit",
+      {
+        "assets": [
+          "CHANGELOG.md",
+          "pyproject.toml",
+          "src/py_netatmo_truetemp/__init__.py"
+        ],
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+      }
+    ],
+    [
       "@semantic-release/github",
       {
         "successComment": false,
