--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,7 +64,105 @@ jobs:
           extra_plugins: |
             @semantic-release/changelog
             @semantic-release/exec
-            @semantic-release-extras/verified-git-commit
             conventional-changelog-conventionalcommits
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+
+      - name: Commit and push changes via GitHub API
+        if: steps.semantic.outputs.new_release_published == 'true'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ steps.app-token.outputs.token }}
+          script: |
+            const version = '${{ steps.semantic.outputs.new_release_version }}';
+            const fs = require('fs');
+
+            // Read updated files
+            const changelog = fs.readFileSync('CHANGELOG.md', 'utf8');
+            const pyproject = fs.readFileSync('pyproject.toml', 'utf8');
+            const initPy = fs.readFileSync('src/py_netatmo_truetemp/__init__.py', 'utf8');
+
+            // Get current commit SHA
+            const { data: ref } = await github.rest.git.getRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: 'heads/main'
+            });
+            const currentCommitSha = ref.object.sha;
+
+            // Get current tree
+            const { data: commit } = await github.rest.git.getCommit({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              commit_sha: currentCommitSha
+            });
+            const baseTreeSha = commit.tree.sha;
+
+            // Create blobs for updated files
+            const changelogBlob = await github.rest.git.createBlob({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              content: Buffer.from(changelog).toString('base64'),
+              encoding: 'base64'
+            });
+
+            const pyprojectBlob = await github.rest.git.createBlob({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              content: Buffer.from(pyproject).toString('base64'),
+              encoding: 'base64'
+            });
+
+            const initPyBlob = await github.rest.git.createBlob({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              content: Buffer.from(initPy).toString('base64'),
+              encoding: 'base64'
+            });
+
+            // Create new tree
+            const { data: newTree } = await github.rest.git.createTree({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              base_tree: baseTreeSha,
+              tree: [
+                {
+                  path: 'CHANGELOG.md',
+                  mode: '100644',
+                  type: 'blob',
+                  sha: changelogBlob.data.sha
+                },
+                {
+                  path: 'pyproject.toml',
+                  mode: '100644',
+                  type: 'blob',
+                  sha: pyprojectBlob.data.sha
+                },
+                {
+                  path: 'src/py_netatmo_truetemp/__init__.py',
+                  mode: '100644',
+                  type: 'blob',
+                  sha: initPyBlob.data.sha
+                }
+              ]
+            });
+
+            // Create commit
+            const { data: newCommit } = await github.rest.git.createCommit({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              message: `chore(release): ${version} [skip ci]`,
+              tree: newTree.sha,
+              parents: [currentCommitSha]
+            });
+
+            // Update main branch reference
+            await github.rest.git.updateRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: 'heads/main',
+              sha: newCommit.sha,
+              force: false
+            });
+
+            console.log(`✓ Committed and pushed: ${newCommit.sha}`)
